<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="false">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:nestedScrollingEnabled="true"
        android:scrollIndicators="right">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="25dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_the_app"
            android:id="@+id/textView5"
            android:layout_gravity="left|center_horizontal"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/story"
            android:id="@+id/textView2"
            android:textStyle="italic"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/claim"
            android:id="@+id/textView4"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="12dp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/claimer"
            android:id="@+id/textView6"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="15dp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/copy3"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/copy2"
            android:id="@+id/textView8"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/copy1"
            android:id="@+id/textView9"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textStyle="bold|italic" />
        </LinearLayout>
    </ScrollView>
